--- a/Pages/Proveedor/Proveedor.razor
+++ b/Pages/Proveedor/Proveedor.razor
@@ -1,4 +1,5 @@
 @page "/proveedor"
+@inject IJSRuntime JSRuntime;
 @attribute [Authorize]
 
 <style>
@@ -74,10 +75,16 @@
                                     <span class="oi oi-phone"></span>
                                 </span>
                             </div>
-                            <input class="form-control" placeholder="Teléfono" 
-                            @bind-value="proveedorRequest.Telefono" 
-                            pattern="\d{3}-\d{3}-\d{4}" 
-                            title="Ingrese un número de teléfono en formato 000-000-0000" required />
+                            <input 
+                                class="form-control" 
+                                placeholder="Teléfono" type="tel"
+                                @bind-value="proveedorRequest.Telefono" 
+                                oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10)" 
+                                required 
+                                pattern="\d{10}" 
+                                title="Debe tener 10 dígitos"
+                            />
+
                         </div>
 
                         <div class="form-group input-group mb-3">
@@ -109,15 +116,18 @@
     <div class="card col-12">
         <div class="card-body">
             <!-- Button trigger modal -->
-            <button class="btn btn-outline-success" @onclick="ShowCard">
+            <button class="btn btn-outline-success d-print-none" @onclick="ShowCard">
                 <span class="oi oi-plus"></span>
-                Nuevo proveedor
             </button>
-            
+            <button class="btn btn-outline-primary d-print-none" 
+                @onclick="async ()=>{await PrintPageAsync();}">
+                <span class="oi oi-print"></span>
+            </button>
+
             <div class="row">
                 <div class="col-8"></div>
                 <div class="col-4">
-                    <div class="input-group">
+                    <div class="input-group d-print-none">
                         <input type="text" class="form-control border-0 border-bottom" 
                         placeholder="Buscar por nombre" @bind="Filtro">
                         <button class="btn btn-outline input-group-text border-0 bg-white" 
@@ -137,7 +147,7 @@
                             <th>Correo</th>
                             <th>Telefono</th>
                             <th>Direccion</th>
-                            <th>...</th>
+                            <th class="d-print-none">...</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -147,9 +157,9 @@
                                 <td>@proveedorRow.Id</td>
                                 <td>@proveedorRow.NombreEmp</td>
                                 <td>@proveedorRow.Email</td>
-                                <td>@proveedorRow.Telefono</td>
+                                <td>@FormatPhoneNumber(proveedorRow.Telefono)</td>
                                 <td>@proveedorRow.Direccion</td>
-                                <td>
+                                <td class="d-print-none">
                                     <button @onclick="()=>Seleccionar(proveedorRow.Id)"
                                         class="btn btn-outline-warning">
                                         <span class="oi oi-pencil"></span>
@@ -179,6 +189,20 @@
     public ProveedorRequest proveedorRequest { get; set; } = new();
     public bool showCard { get; set; } = false;
 
+    private string FormatPhoneNumber(string phoneNumber)
+    {
+        // Verifica si el número telefónico tiene la longitud esperada
+        if (phoneNumber.Length == 10)
+        {
+            // Formatea el número telefónico
+            return $"({phoneNumber.Substring(0, 3)}) {phoneNumber.Substring(3, 3)}-{phoneNumber.Substring(6)}";
+        }
+        else
+        {
+            // Devuelve el número telefónico sin cambios si no tiene la longitud esperada
+            return phoneNumber;
+        }
+    }
     void ShowCard()
     {
         showCard = true;
@@ -254,4 +278,9 @@
         }
     }
 
+    private async Task PrintPageAsync()
+    {
+        // Llama a la función JavaScript para imprimir la página
+        await JSRuntime.InvokeVoidAsync("printPage");
+    }
 }
