--- a/Pages/Cliente/Cliente.razor
+++ b/Pages/Cliente/Cliente.razor
@@ -1,4 +1,5 @@
 @page "/cliente"
+@inject IJSRuntime JSRuntime;
 @inject IClienteServices clienteServices;
 @attribute [Authorize]
 
@@ -75,7 +76,12 @@
                                 </span>
                             </div>
                             <input  class="form-control" placeholder="Cedula" 
-                            @bind-value="request.Cedula" required />
+                                @bind-value="request.Cedula" 
+                                oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 11)" 
+                                required 
+                                pattern="\d{11}" 
+                                title="Debe tener 11 dígitos" 
+                            />
                         </div>
 
                         <div class="form-group input-group mb-3">
@@ -85,8 +91,12 @@
                                 </span>
                             </div>
                             <input class="form-control" type="tel" placeholder="Teléfono" 
-                            @bind-value="request.Telefono" pattern="\d{3}-\d{3}-\d{4}" 
-                            title="Ingrese un número de teléfono en formato 000-000-0000" required />
+                                @bind-value="request.Telefono" 
+                                oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10)" 
+                                required 
+                                pattern="\d{10}" 
+                                title="Debe tener 10 dígitos" 
+                            />
                         </div>
 
                         <div class="form-group input-group mb-3">
@@ -128,15 +138,18 @@
     <div class="card col-12">
         <div class="card-body">
             <!-- Button trigger modal -->
-            <button class="btn btn-outline-success" @onclick="ShowCard">
+            <button class="btn btn-outline-success d-print-none" @onclick="ShowCard">
                 <span class="oi oi-plus"></span>
-                Nuevo cliente
             </button>
-            
+            <button class="btn btn-outline-primary d-print-none" 
+                @onclick="async ()=>{await PrintPageAsync();}">
+                <span class="oi oi-print"></span>
+            </button>
+
             <div class="row">
                 <div class="col-8"></div>
                 <div class="col-4">
-                    <div class="input-group">
+                    <div class="input-group d-print-none">
                         <input type="text" class="form-control border-0 border-bottom" 
                         placeholder="Buscar por nombre" @bind="Filtro">
                         <button class="btn btn-outline input-group-text border-0 bg-white" 
@@ -157,7 +170,7 @@
                             <th>Direccion</th>
                             <th>Telefono</th>
                             <th>Limite/Credito</th>
-                            <th>...</th>
+                            <th class="d-print-none">...</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -165,12 +178,12 @@
                         {
                             <tr>
                                 <td>@Row.Id</td>
-                                <td>@Row.Cedula</td>
+                                <td>@FormatCustomerId(Row.Cedula)</td>
                                 <td>@Row.Nombre @Row.Apellidos</td>
-                                <td>@Row.Telefono</td>
+                                <td>@FormatPhoneNumber(Row.Telefono)</td>
                                 <td>@Row.Direccion</td>
                                 <td>$@Row.Limitecredito.ToString("N2")</td>
-                                <td>
+                                <td class="d-print-none">
                                     <button @onclick="()=>Seleccionar(Row.Id)"
                                         class="btn btn-outline-warning">
                                         <span class="oi oi-pencil"></span>
@@ -201,6 +214,34 @@
     public bool showCard { get; set; } = false;
     public string Message { get; set; } = "";
 
+    private string FormatPhoneNumber(string phoneNumber)
+    {
+        // Verifica si el número telefónico tiene la longitud esperada
+        if (phoneNumber.Length == 10)
+        {
+            // Formatea el número telefónico
+            return $"({phoneNumber.Substring(0, 3)}) {phoneNumber.Substring(3, 3)}-{phoneNumber.Substring(6)}";
+        }
+        else
+        {
+            // Devuelve el número telefónico sin cambios si no tiene la longitud esperada
+            return phoneNumber;
+        }
+    }
+    private string FormatCustomerId(string customerId)
+    {
+        // Verifica si el número telefónico tiene la longitud esperada
+        if (customerId.Length == 11)
+        {
+            // Formatea el número telefónico
+            return $"{customerId.Substring(0, 3)}-{customerId.Substring(3, 7)}-{customerId.Substring(10)}";
+        }
+        else
+        {
+            // Devuelve el número telefónico sin cambios si no tiene la longitud esperada
+            return customerId;
+        }
+    }
     void ShowCard()
     {
         showCard = true;
@@ -274,6 +315,12 @@
             await CargarContactos();
             StateHasChanged();
         }
+    }
+
+    private async Task PrintPageAsync()
+    {
+        // Llama a la función JavaScript para imprimir la página
+        await JSRuntime.InvokeVoidAsync("printPage");
     }
 
 }
