--- a/Pages/Facturacion/AddEditFactura.razor
+++ b/Pages/Facturacion/AddEditFactura.razor
@@ -2,11 +2,7 @@
 @using FactuSystem.Data.Request;
 @using FactuSystem.Data.Response;
 @inject IJSRuntime JSRuntime;
-<script>
-    function printPage() {
-    window.print();
-}
-</script>
+
 
 <EditForm Model="facturaRequest" OnValidSubmit="Send">
     @*Disenar el espacio para el cliente o contacto a facturarle*@
@@ -33,6 +29,7 @@
             <span class="oi oi-reload"></span>
         </button>
     </div>
+
     @*Disenar el espacio para los productos a facturar*@
     <div class="card p-2 d-print-none">
         <div class="card-header card-title" style="background-color: rgb(0, 0, 53); color: #ffffff;">
@@ -87,6 +84,7 @@
             </div>
         }
     </div>
+
     @*Disenar los elementos que se cargan a la factura*@
     <h5><b>Detalle de la factura N°:</b> @ultimoIdFactura</h5>
     <table class="table table-hover">
@@ -159,59 +157,63 @@
             }
         </tbody>
     </table>
+
     <div class="row">
-        <div class="col">
-            <div class="card mb-3 p-3">
-                <div class="row card-header">
-                    <div class="col-4">
-                        <h5><b>Resumen:</b></h5>
-                    </div>
-                    <div class="col-4">
-                        <div class="input-group">
-                            <select class="form-control" required @bind="@facturaRequest.TypePayment">
-                                <option disabled selected value="">Tipo de Venta</option>
-                                <option value="1">Contado 💲</option>
-                                <option value="2">Crédito 💳</option>
-                            </select>
-                            
-                            <button class="btn btn-warning d-print-none" @onclick="UpdatePage">
-                                <span class="oi oi-loop"></span>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="input-group d-print-none">
-                            <input type="number" @bind="@facturaRequest.SaldoPagado" id="montoPagado" 
-                            class="form-control"/>
-                            <button 
-                                class="btn btn-success rounded" 
-                                type="button"
-                                @onclick="CalcularCambio">
-                                Pagar
-                            </button>
-                        </div>
+        @*Resumen de la venta*@
+        <div class="col card mt-2">
+            <div class="row card-header">
+                <!-- Encabezado de la tarjeta -->
+                <div class="col-4">
+                    <h5><b>Resumen:</b></h5>
+                </div>
+                <div class="col-4">
+                    <!-- Sección de tipo de venta y botón de actualización -->
+                    <div class="input-group">
+                        <select class="form-control" required @bind="@facturaRequest.TypePayment">
+                            <option disabled selected value="">Tipo de Venta</option>
+                            <option value="1">Contado 💲</option>
+                            <option value="2">Crédito 💳</option>
+                        </select>
+                        
+                        <button class="btn btn-warning d-print-none" @onclick="UpdatePage">
+                            <span class="oi oi-loop"></span>
+                        </button>
                     </div>
                 </div>
-                <div class="card-body">
+                <div class="col-4">
+                    <!-- Sección de pago -->
+                    <div class="input-group d-print-none">
+                        <input type="number" @bind="@facturaRequest.SaldoPagado" id="montoPagado" class="form-control"/>
+                        <button class="btn btn-success rounded" type="button" @onclick="CalcularCambio">
+                            Pagar
+                        </button>
+                    </div>
+                </div>
+            </div>
 
-                    <label><b>SubTotal: </b></label>
-                    @facturaRequest.SubTotal.ToString("N2")
-                    <br>
-
-                    <label for=""><b>ITBIS: </b></label>
-                    @($"{(facturaRequest.SubTotal * 0.18m):N2}")
-                    <br>
-                    <label for=""><b>Descuento: </b></label>
-                    @facturaRequest.TotalDesc.ToString("N2")
-                    <br>
-
-
-                    <label for=""><b>Total: </b></label>
-                    @($"{(facturaRequest.SubTotal - facturaRequest.TotalDesc):N2}")
-
-
-                    <div class="mb-3">
-                        
+            <!-- Cuerpo de la tarjeta -->
+            <div class="card-body text-center">
+                <div class="row">
+                    <div class="col">
+                        <!-- Lista de resumen -->
+                        <ul class="list-unstyled">
+                            <li class="mb-2">
+                                <strong>Amount:</strong>
+                                <span class="float-end">$@facturaRequest.SubTotal.ToString("N2")</span>
+                            </li>
+                            <li class="mb-2">
+                                <strong>Taxes:</strong>
+                                <span class="float-end">$@($"{(facturaRequest.SubTotal * 0.18m):N2}")</span>
+                            </li>
+                            <li class="mb-2">
+                                <strong>Discount:</strong>
+                                <span class="float-end">$@facturaRequest.TotalDesc.ToString("N2")</span>
+                            </li>
+                            <li>
+                                <strong>Total Amount:</strong>
+                                <span class="float-end">$@($"{(facturaRequest.SubTotal - facturaRequest.TotalDesc):N2}")</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -219,28 +221,30 @@
 
         @if (Chance )
         {
-                <div class="col-3">
-                    <div class="card mb-3 p-3">
-                        <h5 class="card-header"><b>Cambio:</b> @Cambio.ToString("N2")</h5>
-                        <div class="card-body"> 
-                            <div class="mb-3">
-                                <button 
-                                    class="btn btn-danger d-print-none" 
-                                    type="button"
-                                    @onclick="CancelarPago">
-                                    <span class="oi oi-x"></span>
-                                </button>
-                                <button 
-                                    class="btn btn-success d-print-none" 
-                                    type="submit" @onclick="PrintPageAsync">
-                                    <span class="oi oi-check"></span>
-                                </button>
-                            </div>
+            @*Cambio del efectivo*@
+            <div class="col-3">
+                <div class="card mb-3 p-3">
+                    <h5 class="card-header"><b>Cambio:</b> @Cambio.ToString("N2")</h5>
+                    <div class="card-body"> 
+                        <div class="mb-3">
+                            <button 
+                                class="btn btn-danger d-print-none" 
+                                type="button"
+                                @onclick="CancelarPago">
+                                <span class="oi oi-x"></span>
+                            </button>
+                            <button 
+                                class="btn btn-success d-print-none" 
+                                type="submit" @onclick="async ()=>{await PrintPageAsync();}">
+                                <span class="oi oi-check"></span>
+                            </button>
                         </div>
                     </div>
                 </div>
+            </div>
         }
     </div>
+
 </EditForm>
 
 @code {
@@ -368,33 +372,33 @@
     }
     public string TypePayment {get; set;} = string.Empty;
     async Task Send()
-{
-    if (facturaRequest.SaldoPagado > facturaRequest.SaldoPagado - facturaRequest.TotalDesc 
-        && facturaRequest.TypePayment == "2")
     {
-        Pendiente();
+        if (facturaRequest.SaldoPagado > facturaRequest.SaldoPagado - facturaRequest.TotalDesc 
+            && facturaRequest.TypePayment == "2")
+        {
+            Pendiente();
 
-        return;
+            return;
+        }
+        
+        BuscarSeleccionarCliente(Nombre);
+
+        // Convertir ICollection a List antes de llamar a la función ActualizarStock
+        var detallesList = facturaRequest.Detalles.ToList();
+
+        // Llamada a la función para actualizar el stock
+        await productoServices.ActualizarStock(
+            detallesList.Select(d => d.ProductoId).ToList(), detallesList);
+
+        var result = await facturaServices.Crear(facturaRequest);
+        Message = null;
+
+        if (!result.Success)
+        {
+            Message = "Estoy cansado de trabajar 😥";
+            return;
+        }
     }
-    
-    BuscarSeleccionarCliente(Nombre);
-
-    // Convertir ICollection a List antes de llamar a la función ActualizarStock
-    var detallesList = facturaRequest.Detalles.ToList();
-
-    // Llamada a la función para actualizar el stock
-    await productoServices.ActualizarStock(
-        detallesList.Select(d => d.ProductoId).ToList(), detallesList);
-
-    var result = await facturaServices.Crear(facturaRequest);
-    Message = null;
-
-    if (!result.Success)
-    {
-        Message = "Estoy cansado de trabajar 😥";
-        return;
-    }
-}
 
     void CancelarPago()
     {
@@ -410,15 +414,14 @@
     public decimal Total = 0;
     void CalcularCambio()
     {
-        if (facturaRequest.Detalles.Count == 0)
-        {
-            Message = "😒 Debes agregar al menos un producto al detalle. 🛒";
-            return;
-        }
-
         if (string.IsNullOrEmpty(Nombre))
         {
             Message = "😒 Debes seleccionar un cliente. 🙍‍♂️";
+            return;
+        }
+        if (facturaRequest.Detalles.Count == 0)
+        {
+            Message = "😒 Debes agregar al menos un producto al detalle. 🛒";
             return;
         }
 
@@ -427,7 +430,6 @@
             Message = "😒 Debes seleccionar el tipo de venta. 💰";
             return;
         }
-
         
         var clienteSeleccionado = Contactos.FirstOrDefault(c => c.Nombre + " " + c.Apellidos == Nombre);
         if (facturaRequest.TypePayment == "2" && LimiteCreditoExcedido())
