--- a/Pages/Facturacion/FacturaCredito.razor
+++ b/Pages/Facturacion/FacturaCredito.razor
@@ -3,12 +3,6 @@
 @inject IJSRuntime JSRuntime;
 @attribute [Authorize]
 
-<script>
-    function printPage() {
-    window.print();
-}
-</script>
-
 @if(!ShowDetails)
 {
     <form @onsubmit="BuscarFacturas">
@@ -22,7 +16,8 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <button class="btn btn-outline-primary d-print-none" @onclick="PrintPageAsync">
+                <button class="btn btn-outline-primary d-print-none" 
+                    @onclick="async ()=>{await PrintPageAsync();}">
                     <span class="oi oi-print"></span>
                 </button>
             </div>
@@ -249,7 +244,7 @@ else
             </div>
         </div>
         <!-- Mostrar la lista de facturas -->
-        <table class="table table-striped mt-2">
+        <table class="table table-striped">
             <thead class="table" style="background-color: rgb(0, 0, 53); color: #ffffff;">
                 <tr>
                     <th scope="col">#</th>
