--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -6,3 +6,13 @@
 }
 
 <component type="typeof(App)" render-mode="ServerPrerendered" />
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+    window.printPage = function () {
+        window.print();
+    }
+</script>
