--- a/Pages/Facturacion/FacturaContado.razor
+++ b/Pages/Facturacion/FacturaContado.razor
@@ -7,26 +7,24 @@
 
 @if(!ShowDetails)
 {
-    <form @onsubmit="BuscarFacturas">
-        <div class="row mb-3 d-print-none">
-            <div class="col-md-3 form-group">
-                <div class="input-group">
-                    <input type="date" class="form-control" @bind="fechaFiltro">
-                    <button type="submit" class="btn btn-outline-primary">
-                        <span class="oi oi-magnifying-glass"></span>
-                    </button>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <button class="btn btn-outline-primary d-print-none" @onclick="async ()=>{await PrintPageAsync();}">
-                    <span class="oi oi-print"></span>
+    <div class="row mb-3 d-print-none">
+        <div class="col-md-3 form-group">
+            <div class="input-group">
+                <input type="date" class="form-control" @bind="fechaFiltro">
+                <button @onclick="async ()=>{await BuscarFacturas();}" class="btn btn-outline-primary">
+                    <span class="oi oi-magnifying-glass"></span>
                 </button>
             </div>
-            <div class="col-md-1">
-                 
-            </div>
         </div>
-    </form>
+        <div class="col-md-3">
+            <button class="btn btn-outline-primary d-print-none" @onclick="async ()=>{await PrintPageAsync();}">
+                <span class="oi oi-print"></span>
+            </button>
+        </div>
+        <div class="col-md-1">
+                
+        </div>
+    </div>
 }
 else
 {
@@ -230,15 +228,31 @@ else
     public List<FacturaDetalleResponse> FacturaDetalles { get; set; } = new();
     public FacturaResponse? SelectedFactura { get; set; } // Factura seleccionada
     
-    public async Task BuscarFacturas()
+    private async Task BuscarFacturas()
     {
-        var resultado = await facturaServices.BuscarFacturas(fechaFiltro);
-        if (resultado.Success)
+        try
         {
-            Facturas = resultado.Data ?? new List<FacturaResponse>();
+            var resultado = await facturaServices.BuscarFacturas(fechaFiltro);
+            if (resultado.Success)
+            {
+                Facturas = resultado.Data ?? new List<FacturaResponse>();
+            }
+            else
+            {
+                // Log the error or display an error message
+                Console.WriteLine($"Error: {resultado.Message}");
+            }
+
+            StateHasChanged();
         }
-        StateHasChanged();
+        catch (Exception ex)
+        {
+            // Log the exception or display an error message
+            Console.WriteLine($"Exception: {ex.Message}");
+        }
     }
+
+
 
     void Back()
     {
